--- a/src/components/Desktop/MixArchive/MixArchiveStyles.css
+++ b/src/components/Desktop/MixArchive/MixArchiveStyles.css
@@ -1,13 +1,13 @@
 .mixArchiveContainer{
     position: absolute;
-    right: 180px;
+    right: 260px;
     top: 20px;
     text-align: right;
 }
 
 .mixArchiveButton{
     font-family: "ABC Medium";
-    font-size: 30px;
+    font-size: 26px;
     background: none;
 	color: inherit;
 	border: none;
